clean up riddle code